# sketch-filler

./: .gitignore  CMakeLists.txt  NOTE.md  build.py  main.cpp
backend/: CMakeLists.txt  renderer.cpp
backend/Shared/: CMakeLists.txt  asm_opencv.h  renderer.cpp
backend/Static/: CMakeLists.txt  renderer.cpp  renderer.h
chalenges/: chalenges.afdesign
processing/: CMakeLists.txt
processing/contrib/: CMakeLists.txt  thinning.cpp  thinning.hpp
processing/filler/: CMakeLists.txt  Filler.cpp  Filler.hpp
processing/morphologicals/: CMakeLists.txt  morphologicals.cpp  morphologicals.hpp
processing/pixels/: CMakeLists.txt  pixels.hpp  thin.cpp
processing/points/: CMakeLists.txt  points.hpp
processing/polygons/: CMakeLists.txt  polygons.cpp  polygons.hpp  simplify.cpp
qtds/: CMakeLists.txt  Colorize.qmlproject  Colorize.qmlproject.qtds  qmlmodules
qtds/content/: App.qml
qtds/imports/: CMakeLists.txt
qtds/imports/Colorize/: CMakeLists.txt  Constants.qml  qmldir
qtds/imports/Colorize/designer/: plugin.metainfo
qtds/imports/backend/: BackendShared.lib  BackendShared.qmltypes  BackendSharedplugin.lib  CMakeLists.txt  qmldir  renderer.h
qtds/src/: import_qml_plugins.h  main.cpp  qopencvwidget.cpp  qopencvwidget.h
showroom/: CMakeLists.txt  debug.cpp  main.cpp
